<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_categories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/standard_margin"
        android:paddingLeft="@dimen/standard_margin"
        android:paddingRight="@dimen/standard_margin"
        android:paddingTop="@dimen/standard_margin" />


</RelativeLayout>

