...
                android:layout_below="@id/tvProductPrice"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_toRightOf="@id/tvPriceDenomination"
                android:text="@{String.valueOf((Float)viewModel.Price)}" />

            <Button
                android:id="@+id/cartButton"
                style="@style/style_blue_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvProductPriceValue"
                android:layout_margin="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
...
